修复linux下打包后部分功能无法使用